# scratchstack-wrapper-aws-c-sdkutils

./: Cargo.toml  README.md  build.rs
src/: lib.rs  tests.rs
